update for MySQL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if(WT_USE_HUNTER)
     )
 endif(WT_USE_HUNTER)
 
-PROJECT(WT)
+PROJECT(WT VERSION 3.3.7)
 
 SET(CMAKE_MODULE_PATH
   ${CMAKE_MODULE_PATH}
@@ -27,9 +27,9 @@ SET(CMAKE_MODULE_PATH
   ${WT_SOURCE_DIR}/cmake
 )
 
-SET(VERSION_SERIES 3)
-SET(VERSION_MAJOR 3)
-SET(VERSION_MINOR 7)
+SET(VERSION_SERIES ${PROJECT_VERSION_MAJOR})
+SET(VERSION_MAJOR ${PROJECT_VERSION_MINOR})
+SET(VERSION_MINOR ${PROJECT_VERSION_PATCH})
 
 SET(WT_SOVERSION 41)
 SET(WTEXT_SOVERSION 41)
