--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -1,4 +1,4 @@
-include("${CMAKE_CURRENT_LIST_DIR}/@targets_export_name@.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/@WT_TARGETS_EXPORT_NAME@.cmake")
 
 include(CMakeFindDependencyMacro) 
 
