changes for hunter

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -530,6 +530,8 @@ IF(ENABLE_LIBWTTEST)
   IF(MSVC)
     SET_TARGET_PROPERTIES(wttest PROPERTIES COMPILE_FLAGS "${BUILD_PARALLEL} /wd4251 /wd4275 /wd4355 /wd4800 /wd4996 /wd4101 /wd4267")
 	SET_TARGET_PROPERTIES(wttest PROPERTIES FOLDER "test")
+	#need to turn off auto linking for boost
+    target_compile_definitions(wt PUBLIC "BOOST_ALL_NO_LIB=1")
   ENDIF(MSVC)
 
   SET_TARGET_PROPERTIES(
@@ -620,18 +622,40 @@ IF(MULTI_THREADED_BUILD)
   TARGET_LINK_LIBRARIES(wt PRIVATE ${WT_THREAD_LIB})
 ENDIF(MULTI_THREADED_BUILD)
 
-TARGET_INCLUDE_DIRECTORIES(wt INTERFACE
-  $<INSTALL_INTERFACE:include>)
+set(WT_CONFIG_INSTALL_DIR "lib/cmake/${PROJECT_NAME}")
+set(WT_VERSION_CONFIG "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
+set(WT_PROJECT_CONFIG "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake")
+set(WT_TARGETS_EXPORT_NAME "${PROJECT_NAME}Targets")
 
-INSTALL(TARGETS wt
-    EXPORT wt-target-wt
-    RUNTIME DESTINATION bin
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    ${WT_VERSION_CONFIG} 
+    VERSION ${VERSION_SERIES}.${VERSION_MAJOR}.${VERSION_MINOR}
+    COMPATIBILITY SameMajorVersion
+)
+
+configure_package_config_file("${CMAKE_CURRENT_LIST_DIR}/../cmake/Config.cmake.in" ${WT_PROJECT_CONFIG} 
+    INSTALL_DESTINATION "${WT_CONFIG_INSTALL_DIR}")
+
+install(
+    TARGETS wt
+    EXPORT "${WT_TARGETS_EXPORT_NAME}"
     LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-    ARCHIVE DESTINATION ${LIB_INSTALL_DIR})
+    ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
+    RUNTIME DESTINATION "bin"
+    INCLUDES DESTINATION "include"
+)
 
-INSTALL(EXPORT wt-target-wt
-        DESTINATION ${CMAKE_INSTALL_DIR}/wt
-        NAMESPACE Wt::)
+install(
+    FILES "${WT_PROJECT_CONFIG}" "${WT_VERSION_CONFIG}"
+    DESTINATION "${WT_CONFIG_INSTALL_DIR}"
+)
+
+install(
+    EXPORT "${WT_TARGETS_EXPORT_NAME}"
+    NAMESPACE "${PROJECT_NAME}::"
+    DESTINATION "${WT_CONFIG_INSTALL_DIR}"
+)
 
 CONFIGURE_FILE(
   ${WT_SOURCE_DIR}/WtInstall.cmake
